# routes/cart.route.js
@@ -5,5 +5,6 @@ module.exports = (app) => {
 
   router.get("/findAll", cart.findAll);
   router.post("/create", cart.create);
+  router.post("/checkOut", cart.checkOut);
   app.use("/api/cart", router);
 };
