# swagger.yml
@@ -34,6 +34,22 @@ paths:
         "200":
           description: OK
 
+  /api/cart/checkOut:
+    post:
+      tags:
+        - cart
+      requestBody:
+        content:
+          application/x-www-form-urlencoded:
+            schema:
+              type: object
+              properties:
+                user_id:
+                  type: integer
+      responses:
+        "200":
+          description: OK
+
   /api/product/findAll:
     get:
       tags:
